recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:7: error: not found: value step
		avance(step);gauche(step);
                       ^Spiral:7: error: not found: value step
		avance(step);gauche(step);
                                    ^