recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
	if(steps == 0 ){
		
	}
	else {
		avance(step);gauche(step);
	}
}

spiral(5,90,0,3)